syntax = "proto3";

package lcm.service.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// Certificate Job Service - handles async certificate issuance
service LcmCertificateJobService {
  // Request a new certificate (async - returns job ID immediately)
  rpc RequestCertificate(RequestCertificateRequest) returns (RequestCertificateResponse) {
    option (google.api.http) = {
      post: "/v1/certificate-jobs"
      body: "*"
    };
  }

  // Get the status of a certificate job
  rpc GetJobStatus(GetJobStatusRequest) returns (GetJobStatusResponse) {
    option (google.api.http) = {
      get: "/v1/certificate-jobs/{job_id}/status"
    };
  }

  // Get the result of a completed certificate job
  rpc GetJobResult(GetJobResultRequest) returns (GetJobResultResponse) {
    option (google.api.http) = {
      get: "/v1/certificate-jobs/{job_id}/result"
    };
  }

  // List certificate jobs for the authenticated client
  rpc ListJobs(ListJobsRequest) returns (ListJobsResponse) {
    option (google.api.http) = {
      get: "/v1/certificate-jobs"
    };
  }

  // Cancel a pending certificate job
  rpc CancelJob(CancelJobRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/certificate-jobs/{job_id}/cancel"
    };
  }
}

// Job status enumeration
enum CertificateJobStatus {
  CERTIFICATE_JOB_STATUS_UNSPECIFIED = 0;
  CERTIFICATE_JOB_STATUS_PENDING = 1;     // Job created, waiting to be processed
  CERTIFICATE_JOB_STATUS_PROCESSING = 2;  // Job is being processed
  CERTIFICATE_JOB_STATUS_COMPLETED = 3;   // Job completed successfully
  CERTIFICATE_JOB_STATUS_FAILED = 4;      // Job failed
  CERTIFICATE_JOB_STATUS_CANCELLED = 5;   // Job was cancelled
}

// Request to create a new certificate
message RequestCertificateRequest {
  // Issuer to use for certificate generation
  string issuer_name = 1 [
    json_name = "issuerName",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 100
      pattern: "^[a-zA-Z0-9\\-_]+$"
    }
  ];

  // Common name for the certificate
  string common_name = 2 [
    json_name = "commonName",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 253
      pattern: "^[a-zA-Z0-9*][a-zA-Z0-9\\-\\.\\*]*$"
    }
  ];

  // DNS names for Subject Alternative Names
  repeated string dns_names = 3 [
    json_name = "dnsNames",
    (buf.validate.field).repeated = {
      max_items: 100
      items: {
        string: {
          min_len: 1
          max_len: 253
          pattern: "^[a-zA-Z0-9*]([a-zA-Z0-9\\-*]{0,61}[a-zA-Z0-9*])?(\\.[a-zA-Z0-9*]([a-zA-Z0-9\\-*]{0,61}[a-zA-Z0-9*])?)*$"
        }
      }
    }
  ];

  // IP addresses for Subject Alternative Names
  repeated string ip_addresses = 4 [
    json_name = "ipAddresses",
    (buf.validate.field).repeated = {
      max_items: 50
      items: {
        string: {ip: true}
      }
    }
  ];

  // Optional CSR (if not provided, key will be generated)
  optional string csr_pem = 5 [
    json_name = "csrPem",
    (buf.validate.field).string = {
      max_len: 16384
      pattern: "^-----BEGIN CERTIFICATE REQUEST-----[\\s\\S]*-----END CERTIFICATE REQUEST-----[\\s]*$"
    }
  ];

  // Key type (only used if CSR is not provided)
  optional string key_type = 6 [
    json_name = "keyType",
    (buf.validate.field).string = {
      in: ["ecdsa", "rsa", "ECDSA", "RSA"]
    }
  ];

  // Key size in bits (only used if CSR is not provided)
  optional int32 key_size = 7 [
    json_name = "keySize",
    (buf.validate.field).int32 = {
      gte: 256
      lte: 4096
    }
  ];

  // Certificate validity in days
  optional int32 validity_days = 8 [
    json_name = "validityDays",
    (buf.validate.field).int32 = {
      gte: 1
      lte: 825
    }
  ];

  // Custom metadata
  map<string, string> metadata = 9 [
    json_name = "metadata",
    (buf.validate.field).map = {
      max_pairs: 50
      keys: {
        string: {
          min_len: 1
          max_len: 64
          pattern: "^[a-zA-Z][a-zA-Z0-9_]*$"
        }
      }
      values: {
        string: {max_len: 512}
      }
    }
  ];
}

// Response with job ID for tracking
message RequestCertificateResponse {
  string job_id = 1 [json_name = "jobId"];
  CertificateJobStatus status = 2 [json_name = "status"];
  string message = 3 [json_name = "message"];
}

// Request to get job status
message GetJobStatusRequest {
  string job_id = 1 [
    json_name = "jobId",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];
}

// Job status response
message GetJobStatusResponse {
  string job_id = 1 [json_name = "jobId"];
  CertificateJobStatus status = 2 [json_name = "status"];
  string issuer_name = 3 [json_name = "issuerName"];
  string issuer_type = 4 [json_name = "issuerType"];
  string common_name = 5 [json_name = "commonName"];
  repeated string dns_names = 6 [json_name = "dnsNames"];
  repeated string ip_addresses = 7 [json_name = "ipAddresses"];
  optional string error_message = 8 [json_name = "errorMessage"];
  google.protobuf.Timestamp created_at = 9 [json_name = "createdAt"];
  optional google.protobuf.Timestamp completed_at = 10 [json_name = "completedAt"];
}

// Request to get job result
message GetJobResultRequest {
  string job_id = 1 [
    json_name = "jobId",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];
  // Whether to include the private key in the response
  optional bool include_private_key = 2 [json_name = "includePrivateKey"];
}

// Job result response
message GetJobResultResponse {
  string job_id = 1 [json_name = "jobId"];
  CertificateJobStatus status = 2 [json_name = "status"];

  // Certificate data (only present if job is completed)
  optional string certificate_pem = 3 [json_name = "certificatePem"];
  optional string ca_certificate_pem = 4 [json_name = "caCertificatePem"];
  optional string private_key_pem = 5 [json_name = "privateKeyPem"]; // Only if include_private_key=true and server-generated
  optional string serial_number = 6 [json_name = "serialNumber"];
  optional google.protobuf.Timestamp expires_at = 7 [json_name = "expiresAt"];
  optional google.protobuf.Timestamp issued_at = 8 [json_name = "issuedAt"];

  // Error info (only present if job failed)
  optional string error_message = 9 [json_name = "errorMessage"];

  // Certificate request data
  optional string csr_pem = 10 [json_name = "csrPem"]; // Certificate Signing Request
  optional string key_type = 11 [json_name = "keyType"]; // Key type (RSA, ECDSA)
  optional int32 key_size = 12 [json_name = "keySize"]; // Key size in bits
  optional bool server_generated_key = 13 [json_name = "serverGeneratedKey"]; // True if key was generated by server
}

// Request to list jobs
message ListJobsRequest {
  optional CertificateJobStatus status = 1 [json_name = "status"]; // Filter by status
  optional uint32 page = 2 [json_name = "page"];
  optional uint32 page_size = 3 [json_name = "pageSize"];
  optional string issuer_name = 4 [json_name = "issuerName"]; // Filter by issuer name
  optional uint32 tenant_id = 5 [json_name = "tenantId"]; // Tenant ID override (admin only)
}

// List jobs response
message ListJobsResponse {
  repeated CertificateJobInfo jobs = 1 [json_name = "jobs"];
  uint32 total = 2 [json_name = "total"];
}

// Job summary info for listing
message CertificateJobInfo {
  string job_id = 1 [json_name = "jobId"];
  CertificateJobStatus status = 2 [json_name = "status"];
  string issuer_name = 3 [json_name = "issuerName"];
  string issuer_type = 4 [json_name = "issuerType"];
  string common_name = 5 [json_name = "commonName"];
  google.protobuf.Timestamp created_at = 6 [json_name = "createdAt"];
  optional google.protobuf.Timestamp completed_at = 7 [json_name = "completedAt"];
  optional string error_message = 8 [json_name = "errorMessage"];
}

// Request to cancel a job
message CancelJobRequest {
  string job_id = 1 [
    json_name = "jobId",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];
}
